--- a/css/styles.css
+++ b/css/styles.css
@@ -269,3 +269,47 @@ header.transparente{
 .primera{
     margin-top: 100vh; /*para que baje por debajo delelemento hero y lo podamos visualzar*/
 }
+
+.fila{
+    display: flex;
+    padding: 2rem 1rem;
+}
+.col-100{
+    width: 100%;
+    padding: 0.5rem 1rem;
+}
+.col-75{
+    width: 75%;
+    padding: 0.5rem 1rem;
+}
+.col-66{
+    width: 66.66666%;
+    padding: 0.5rem 1rem;
+}
+.col-50{
+    width: 50%;
+    padding: 0.5rem 1rem;
+}
+.col-33{
+    width: 33.33333%;
+    padding: 0.5rem 1rem;
+}
+.col-25{
+    width: 25%;
+    padding: 0.5rem 1rem;
+}
+
+@media (max-width:720px){
+    .fila{
+        flex-direction: column;
+        padding: 1rem 0.5rem;
+    }
+    .col-100,
+    .col-75,
+    .col-66,
+    .col-50,
+    .col-33,
+    .col-25{
+        width: 100%;
+    }
+}
